# Android-code

./: README.md
AIDL/app/: build.gradle
AIDL/client/: build.gradle
AOP/: build.gradle  settings.gradle
AOP/aop/: build.gradle
AOP/proxy/: build.gradle
AOP_DB/: build.gradle  local.properties  settings.gradle
AOP_DB/aoplogin/: build.gradle
AOP_DB/app/: build.gradle
AliVLayout/app/: build.gradle
AliVLayout/demo/: build.gradle
AmigoServiceKotlin/: build.gradle  config.gradle  hclw.jks  local.properties  settings.gradle
AmigoServiceKotlin/amigo-account/: build.gradle
AmigoServiceKotlin/amigo-app/: build.gradle
AmigoServiceKotlin/amigo-base/: build.gradle
AmigoServiceKotlin/app/: build.gradle
AmigoServiceKotlin/base/: build.gradle  proguard-rules.pro
AmigoServiceKotlin/sdk-adlibs/: build.gradle  proguard-rules.pro
AmigoServiceKotlin/sdk-book/: build.gradle
AmigoServiceKotlin/sdk-game/: build.gradle
AmigoServiceKotlin/sdk-news/: build.gradle
AndroidBehavior/: settings.gradle
AndroidBehavior/app/: build.gradle
AndroidEvent/: settings.gradle
AndroidEvent/app/: build.gradle
AnnotationPermission/: settings.gradle
AnnotationPermission/Annotation/: build.gradle
AnnotationPermission/Compiler/: build.gradle
AnnotationPermission/app/: build.gradle
BSDiff/app/: CMakeLists.txt  build.gradle
BigPictureView/: build.gradle
BigPictureView/app/: build.gradle
BottomSheet/app/: build.gradle
CameraAPI/app/: build.gradle
CameraX/app/: build.gradle
ComponentAPT/: settings.gradle
ComponentAPT/app/: build.gradle
ComponentAPT/compiler/: build.gradle
ComponentJavaPoet/: build.gradle
ComponentJavaPoet/app/: build.gradle
ComponentJavaPoet/compiler/: build.gradle
ComponentModule/: build.gradle  config.gradle  key.jks  settings.gradle  super.gradle
ComponentModule/app/: build.gradle
ComponentModule/arouter_api/: build.gradle
ComponentModule/compiler/: build.gradle
ComponentModule/library-arouter/: build.gradle
ComponentModule/library-common/: build.gradle
ComponentModule/module-order/: build.gradle
ComponentModule/module-personal/: build.gradle
ComponentModule/order/: build.gradle
ComponentModule/personal/: build.gradle
Coroutine/: build.gradle  config.gradle  settings.gradle
Coroutine/app/: build.gradle
Dagger/app/: build.gradle
DesignPatterns/: build.gradle  settings.gradle
EventBus/: settings.gradle
EventCalendar/: gradlew.bat  pioneer.jks  settings.gradle
FragmentOnBack/: settings.gradle
Handler/: settings.gradle
Hermes/: hermes原理.rtf  settings.gradle
Huffman/app/: CMakeLists.txt  build.gradle
Huffman/app/src/main/: AndroidManifest.xml
Huffman/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
Huffman/app/src/main/java/com/lee/huffman/: MainActivity.java  Test.java
Huffman/app/src/main/res/values/: strings.xml
ImageCompress/: settings.gradle
IoC/: settings.gradle
KotlinLibrary/: build.gradle  config.gradle  gradle.properties
KotlinLibraryX/: .gitignore  build.gradle  build.gradle.kts  config.gradle  gradle.properties  settings.gradle  settings.gradle.kts
LeeLibrary/: build.gradle  config.gradle  gradle.properties  settings.gradle
LeePermission/: build.gradle
LeePlayer/app/: CMakeLists.txt  build.gradle
LeePlayer/app/src/main/: AndroidManifest.xml
LeePlayer/app/src/main/cpp/: AudioChannel.cpp  AudioChannel.h  BaseChannel.h  CMakeLists.txt  JavaCallHelper.cpp  JavaCallHelper.h  PlayerControl.cpp  PlayerControl.h  VideoChannel.cpp  VideoChannel.h  macro.h  native-lib.cpp
LeePlayer/app/src/main/java/com/lee/code/player/: LeePlayer.java  MainActivity.java
LeePlayer/app/src/main/res/values/: strings.xml
LiveDemo/app/src/main/cpp/: CMakeLists.txt  VideoChannel.cpp  VideoChannel.h  native-lib.cpp  safe_queue.h
LiveDemo/app/src/main/cpp/librtmp/: CMakeLists.txt
LivePush/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
LivePush/app/src/main/cpp/librtmp/: CMakeLists.txt
ModuleApp/: gradle.properties  settings.gradle
MyApplication/: local.properties
NDKTEST/: settings.gradle
NDKTEST/bsdiff/: CMakeLists.txt  build.gradle
NDKTEST/bsdiff/src/main/: AndroidManifest.xml
NDKTEST/bsdiff/src/main/cpp/: native-lib.cpp
NDKTEST/bsdiff/src/main/cpp/bzip/: bspatch.c
NDKTEST/bsdiff/src/main/java/com/lee/code/bsdiff/: BsPatcher.java  MainActivity.java
NDKTEST/ffmpeg/: CMakeLists.txt  build.gradle
NDKTEST/ffmpeg/src/main/: AndroidManifest.xml
NDKTEST/ffmpeg/src/main/cpp/: native-lib.cpp
NDKTEST/ffmpeg/src/main/java/com/lee/code/ffmpeg/: MainActivity.java  MyPlayer.java
NDKTEST/ffmpeg/src/main/res/layout/: activity_main.xml
NDKTEST/git/: CMakeLists.txt  build.gradle
NDKTEST/git/src/main/: AndroidManifest.xml
NDKTEST/git/src/main/cpp/: native-lib.cpp
NDKTEST/git/src/main/java/com/lee/code/git/: GifHandler.java  MainActivity.java
NDKTEST/git/src/main/res/layout/: activity_main.xml
NDKTEST/git/src/main/res/values/: strings.xml
NDKTEST/livepush/: CMakeLists.txt  build.gradle
NDKTEST/livepush/src/main/: AndroidManifest.xml
NDKTEST/livepush/src/main/cpp/: AudioChannel.cpp  AudioChannel.h  VideoChannel.cpp  VideoChannel.h  macro.h  native-lib.cpp
NDKTEST/livepush/src/main/cpp/librtmp/: CMakeLists.txt
NDKTEST/livepush/src/main/java/com/lee/code/livepush/: LivePusher.java  MainActivity.java
NDKTEST/livepush/src/main/java/com/lee/code/livepush/meida/: AudioChannel.java  Camera2Helper.java  CameraHelper.java  VideoChannel.java  VideoChannel2.java
NDKTEST/livepush/src/main/java/com/lee/code/livepush/utils/: ImageUtil.java
NDKTEST/livepush/src/main/res/layout/: activity_main.xml
NDKTEST/livepush/src/main/res/values/: strings.xml
NavigationApp/: settings.gradle
OpenCVFace/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
Plugin/: settings.gradle
PluginPlaceholder/: settings.gradle
PremissionStudy/: build.gradle
ProtocolBuffer/: build.gradle
Proxy/: .gitignore  settings.gradle
ReviewTest/: settings.gradle
Skin/: settings.gradle
TabLayout/: settings.gradle
TagManageEditor-master/: settings.gradle
WordStatistics/: settings.gradle
(+2636 files in other folders)
